--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 <body>
   <h2>Hello World</h2>
   <p>lorem ipsum</p>
-  
+  <form>
+    <input type="text" placeholder="Enter mail">
+    <input type="submit" value="Subscribe">
+  </form>
 </body>
 </html>
